--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "dev:vercel": "vercel dev",
     "dev:flask": "python -m flask --app api/index.py run -p 5328",
-    "dev:vite": "vite --host",
+    "dev:vite": "farm",
     "dev": "concurrently \"pnpm run dev:vite\" \"pnpm run dev:flask\"",
     "test": "vitest",
-    "build": "vite build",
-    "preview": "vite preview",
-    "build-only": "vite build",
+    "build": "farm build",
+    "preview": "farm preview",
+    "build-only": "farm build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -35,6 +35,7 @@
     "@vue/eslint-config-typescript": "13.0.0",
     "@vue/tsconfig": "0.5.1",
     "concurrently": "9.0.1",
+    "core-js": "^3.30.1",
     "eslint": "8.57.1",
     "eslint-plugin-vue": "9.28.0",
     "happy-dom": "15.7.4",
@@ -42,7 +43,8 @@
     "prettier": "3.3.3",
     "typescript": "5.6.2",
     "vercel": "37.6.1",
-    "vite": "5.4.8",
+    "@farmfe/cli": "^1.0.2",
+    "@farmfe/core": "^1.3.0",
     "vitest": "2.1.2",
     "vue-tsc": "2.1.6"
   }
