--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,7 @@
     "nightwatch.conf.*",
     "playwright.config.*",
     "api/**/*.ts"
-  ],
+, "farm.config.ts"  ],
   "compilerOptions": {
     "composite": true,
     "noEmit": true,
